hphp/hack/test/typecheck/coeffects/rx_no_unsafe.php.exp
File "rx_no_unsafe.php", line 7, characters 3-9:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 6, characters 22-29:
  From this declaration, the context of this function body provides the capability set {AccessStaticVariable, Output, WriteProperty}
  File "rx_no_unsafe.php", line 10, characters 18-19:
  But the function being called requires the capability Rx
File "rx_no_unsafe.php", line 12, characters 3-13:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 10, characters 18-19:
  From this declaration, the context of this function body provides the capability Rx
  File "rx_no_unsafe.php", line 6, characters 22-29:
  But the function being called requires the capability set {AccessStaticVariable, Output, WriteProperty}
File "rx_no_unsafe.php", line 16, characters 3-9:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 15, characters 19-20:
  From this declaration, the context of this function body provides the capability set {}
  File "rx_no_unsafe.php", line 10, characters 18-19:
  But the function being called requires the capability Rx
